...
                selectedIconRes = R.drawable.ic_nav_search_filled,
                iconTag = "main-nav-icon-search",
                selected = currentRoute == SearchRoute,
                onClick = onSearch,
                onFocused = { onDestinationFocused(SearchRoute) },
                modifier = Modifier
                    .testTag("main-nav-search")
                    .focusRequester(searchFocus)
                    .focusProperties {
                        up = FocusRequester.Cancel
                        left = homeFocus
                        right = libraryFocus
                        down = searchMenuFocus
...
