...
                    horizontalArrangement = Arrangement.spacedBy(12.dp),
                ) {
                    DrawerActionButton(
                        text = stringResource(R.string.filter_clear),
                        iconRes = R.drawable.ic_action_clockwise,
                        iconTag = "filter-clear-icon",
                        tag = "filter-clear",
                        onClick = onClear,
                        modifier = Modifier
                            .weight(1f)
                            .focusProperties {
                                left = FocusRequester.Cancel
                                down = FocusRequester.Cancel
...
